--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">Vidhyasagar sant</string>
+    <string name="app_name_hindi">विद्यासागर संत</string>
 
 
     <!--App Message-->
